--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,8 +1,23 @@
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+}
+
+* {
+  box-sizing: border-box;
+}
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
   text-align: center;
+  box-sizing: border-box;
 }
 
 .logo {
@@ -43,15 +58,22 @@
 .image-container {
   /* This part is already in your inline style and is fine */
   /* width: 100%; */
-  height: 300px; /* You must define a fixed height for the container */
+  height: 100vh; /* You must define a fixed height for the container */
   position: relative; /* Useful for absolute positioning later if needed */
   overflow: hidden; /* Ensures the image is clipped if it overflows */
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+  top: 0;
+  left: 0;
 }
 
 .img {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   object-fit: cover;
+  z-index: 0;
+  position: absolute;
 }
 
 h1 {
@@ -79,7 +101,7 @@ h3 {
 }
 
 p {
-  font-size: 1.2em;
+  font-size: 1em;
   line-height: 0.8;
   color: rgba(255, 255, 255, 0.605);
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
