--- a/frontend/src/components/LearningCurve.css
+++ b/frontend/src/components/LearningCurve.css
@@ -3,6 +3,7 @@
   margin: auto;
   min-height: 500px;
   background-color: rgba(255, 255, 255, 0);
+  max-height: calc(100vh - 60px);
 
   border-radius: 30px;
   font-size: small;
